add `comment` endpoints
